# pogotrack_gui

./: CMakeLists.txt  build.sh  readme.md  resources.qrc
.github/workflows/: cmake-multi-platform.yml
src/: Filter.h  ImageDisplay.cpp  ImageDisplay.h  MainWindow.cpp  MainWindow.h  main.cpp
